# BitDown

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
scripts/: gen_icons.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  sqlx-data.json  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: metadata.rs  mod.rs  privacy.rs  rss.rs  settings.rs  streaming.rs  torrent.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.sql
src-tauri/src/engine/: events.rs  manager.rs  mod.rs
src-tauri/src/intelligence/: mod.rs
src-tauri/src/privacy/: mod.rs
src-tauri/src/rss/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/sync/: mod.rs
src/components/intelligence/: MetadataPanel.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/components/rss/: RSSManager.tsx
src/components/settings/: SettingsDialog.tsx
src/components/streaming/: StreamPlayerModal.tsx
src/components/torrent/: AddTorrentDialog.tsx  TorrentDetails.tsx  TorrentList.tsx
src/components/torrent/tabs/: FilesTab.tsx  GeneralTab.tsx  PeersTab.tsx  PieceMapTab.tsx  SpeedTab.tsx  TrackersTab.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useSpeedData.ts  useTauriEvents.ts
src/lib/: tauri-commands.ts  types.ts  utils.ts
src/stores/: settingsStore.ts  torrentStore.ts
