[package]
name = "bitdown"
version = "0.1.0"
description = "BitDown — High-performance BitTorrent client"
authors = []
license = ""
repository = ""
default-run = "bitdown"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bitdown_lib"
# cdylib is for Android, staticlib is for iOS — not needed for Windows desktop
# Keeping rlib only avoids the dlltool.exe requirement on Windows MSVC
crate-type = ["rlib"]

[[bin]]
name = "bitdown"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
# tauri-plugin-updater removed temporarily (pulls ring via reqwest/rustls)

# Async runtime
tokio = { version = "1", features = ["full"] }

# BitTorrent engine
librqbit = { version = "8.1.1", default-features = false, features = [
    "timed_existence",
    "upnp-serve-adapter",
    "tracing-subscriber-utils",
    "default-tls",
] }
librqbit-core = "5"

# HTTP server (streaming + remote control)
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (TMDB, blocklists)
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"

# RSS feed parsing
rss = "2"
atom_syndication = "0.12"

# IP filtering / network
ipnetwork = "0.20"
cidr-utils = "0.5"

# File watching
notify = "6"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Memory-mapped I/O
memmap2 = "0.9"

# Parallel verification
rayon = "1.8"

# System info
sysinfo = "0.31"

# Crypto for token generation
rand = "0.8"

# URL encoding
urlencoding = "2"

# Platform dirs
dirs = "5"

# Open file/folder in shell
open = "5"

# Windows API (free disk space)
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Speed up dev builds — ICU/Unicode crates generate huge amounts of code
# Use maximum codegen-units (parallelism) to speed up their compilation
[profile.dev]
opt-level = 0
codegen-units = 256

[profile.dev.package.icu_properties_data]
opt-level = 0
codegen-units = 256
overflow-checks = false

[profile.dev.package.icu_normalizer_data]
opt-level = 0
codegen-units = 256
overflow-checks = false

[profile.dev.package.icu_properties]
opt-level = 0
codegen-units = 256
overflow-checks = false

[profile.dev.package.icu_normalizer]
opt-level = 0
codegen-units = 256
overflow-checks = false

[profile.dev.package.idna]
opt-level = 0
codegen-units = 256
overflow-checks = false

[profile.dev.package.idna_adapter]
opt-level = 0
codegen-units = 256
overflow-checks = false
